添加部分个人信息

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body class="impress-not-supported">
 <div class="fallback-message">
-    <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
+    <p><b>云开</b>WEB工程师,关注互联网技术，致力于成长为一名架构师</p>
+    <p>15年毕业于软件工程专业，在电商公司实习过，现在的东家是做手游的</p>
 </div>
 
 <div id="impress">
