修改第一页PPT

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body class="impress-not-supported">
 <div class="fallback-message">
-    <p><b>云开</b>WEB工程师,关注互联网技术，致力于成长为一名架构师</p>
-    <p>15年毕业于软件工程专业，在电商公司实习过，现在的东家是做手游的</p>
+    <p>您的浏览器不支持H5,请更新您的浏览器</p>
 </div>
 
 <div id="impress">
 
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
+       <p><b>云开</b>WEB工程师,关注互联网技术，致力于成长为一名架构师</p>
+    <p>15年毕业于软件工程专业，在电商公司实习过，现在的东家是做手游的</p>
     </div>
 
     
