--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </div>
 
 <div id="impress">
+    <div>
+        <a href="https://github.com/you">
+            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://www.baidu.com" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+        </a>
+    </div>
 
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
        <p><b>云开</b>
