--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <p>您的浏览器不支持H5,请更新您的浏览器</p>
 </div>
 
+<div><a href="https://github.com/yunkaiyueming"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a></div>
+
 <div id="impress">
     <div>
         <a href="https://github.com/you">
@@ -44,9 +46,9 @@
 
    
     <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-        <span class="try">正在看的书：</span>
-        <h1>《暗时间》,《黑客与画家》,《持续集成》,《代码大全》</h1>
-        <span class="footnote"><sup>*</sup>DRY</span>
+        <q><strong>正在看的书：<br></strong>
+        《暗时间》,《黑客与画家》,《持续集成》,《代码大全》,《修改代码的艺术》
+        </q>
     </div>
 
     
