--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
     <p>您的浏览器不支持H5,请更新您的浏览器</p>
 </div>
 
-<div><a href="https://github.com/yunkaiyueming"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a></div>
+<div>
+    <a href="https://github.com/yunkaiyueming"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+    </a>
+</div>
 
 <div id="impress">
-    <div>
-        <a href="https://github.com/you">
-            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://www.baidu.com" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
-        </a>
-    </div>
 
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
        <p><b>云开</b>
