--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </h2>
 
       <ul class="task-list">
-        <li><a href="./rose/">Rose</a></li>
-        <li><a href="https://yunkaiyueming.github.io/person_ppt/">person ppt</a></li>
-        <li><a href="https://yunkaiyueming.github.io">turn book</a></li>
+        <li><a href="https://yunkaiyueming.github.io/rose/">Rose ---  真浪漫</a></li>
+        <li><a href="https://yunkaiyueming.github.io/html5-text-pixel">文字爆米花 ---  玩一把</a></li>
+        <!-- <li><a href="./person_ppt/">person ppt</a></li> -->
+        <li><a href="https://yunkaiyueming.github.io/most_beautiful_women">Most Beautiful Women ---  最好看</a></li>
       </ul>
 
       <footer class="site-footer">
