--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="https://yunkaiyueming.github.io/rose/">Rose ---  真浪漫</a></li>
         <li><a href="https://yunkaiyueming.github.io/html5-text-pixel">文字爆米花 ---  玩一把</a></li>
         <!-- <li><a href="./person_ppt/">person ppt</a></li> -->
-        <li><a href="https://yunkaiyueming.github.io/most_beautiful_women">Most Beautiful Women ---  最好看</a></li>
+        <li><a href="https://yunkaiyueming.github.io/most_beautiful_woman">Most Beautiful Woman ---  最好看</a></li>
       </ul>
 
       <footer class="site-footer">
