--- a/mytp_admin_template/index.html
+++ b/mytp_admin_template/index.html
@@ -92,7 +92,7 @@
                         <label class="res-lab">PHP运行方式</label><span class="res-info">apache2handler</span>
                     </li>
                     <li>
-                        <label class="res-lab">静静设计-版本</label><span class="res-info">v-0.1</span>
+                        <label class="res-lab">设计版本</label><span class="res-info">v-0.1</span>
                     </li>
                     <li>
                         <label class="res-lab">上传附件限制</label><span class="res-info">2M</span>
