--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <!-- <li><a href="./person_ppt/">person ppt</a></li> -->
         <li><a href="https://yunkaiyueming.github.io/most_beautiful_woman">Most Beautiful Woman ---  最好看</a></li>
         <li><a href="https://yunkaiyueming.github.io/mytp_admin_template">Mytp Admin Template ---  超简洁</a></li>
+        <li><a href="https://yunkaiyueming.github.io/screen_tan/">Web弹幕 ---  弹走鱼尾纹~</a></li>
       </ul>
 
       <footer class="site-footer">
