--- a/html5-text-pixel/index.html
+++ b/html5-text-pixel/index.html
@@ -274,7 +274,9 @@ style.firebugResetStyles {
     position: fixed !important;
     pointer-events: auto !important;
 }
-</style></head>
+</style>
+<script src="../ga.js"></script>
+</head>
 
 <body>
 
