--- a/rose/index.html
+++ b/rose/index.html
@@ -1,7 +1,8 @@
 <html>    
 <head>    
 <title>I Love You</title>    
-<meta charset="utf-8" />    
+<meta charset="utf-8" />  
+<script src="../ga.js"></script>  
 </head>
 
 <body>    
