--- a/mytp_admin_template/index.html
+++ b/mytp_admin_template/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/common.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <script type="text/javascript" src="js/libs/modernizr.min.js"></script>
+    <script src="../ga.js"></script>
 </head>
 <body>
 <div class="topbar-wrap white">
