--- a/person_ppt/index.html
+++ b/person_ppt/index.html
@@ -11,6 +11,7 @@
     <link href="css/impress-demo.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <script src="../ga.js"></script>
 </head>
 
 <body class="impress-not-supported">
