--- a/romantic_heart-shaped/index.html
+++ b/romantic_heart-shaped/index.html
@@ -88,6 +88,7 @@
 		</script>
 		<script type="text/javascript" src="./js/1457855643.js">
 		</script>
+		<script src="../ga.js"></script>
 	</head>
 	<body>
 		<div id="mainDiv">
